--- a/src/app/Admin/Appointment/appointmenttable/appointmenttable.component.css
+++ b/src/app/Admin/Appointment/appointmenttable/appointmenttable.component.css
@@ -11,6 +11,8 @@
 .mat-column-patient,
 .mat-column-reason,
 .mat-column-status,
+.mat-column-startTime,
+.mat-column-endTime,
 .mat-column-date
  {
   width: 150px; 
