--- a/src/app/forgot-password/forgot-password.component.css
+++ b/src/app/forgot-password/forgot-password.component.css
@@ -59,7 +59,7 @@ body {
     color: #333;
   }
   
-  button[type="button"],
+  
   button[type="submit"] {
     margin-top: 10px;
     background-color: #007bff;
@@ -77,4 +77,16 @@ body {
   button[type="submit"]:hover {
     background-color: #0056b3;
   }
-  
+  button[type="button"]{
+    margin-top: 10px;
+    background-color: #007bff;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    height: 40px;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    width: 200px;
+    left: 5px;
+  }
