--- a/src/app/Admin/Appointment/appointmenttable/appointmenttable.component.html
+++ b/src/app/Admin/Appointment/appointmenttable/appointmenttable.component.html
@@ -26,12 +26,12 @@
         </ng-container>
         <ng-container matColumnDef="patient">
           <th mat-header-cell *matHeaderCellDef  mat-sort-header> Patient </th>
-          <td mat-cell *matCellDef="let element"> {{element.patient.firstname}} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.patient.firstname }} {{ element.patient.lastname }} </td>
         </ng-container>
 
         <ng-container matColumnDef="doctor">
           <th mat-header-cell *matHeaderCellDef  mat-sort-header> Doctor </th>
-          <td mat-cell *matCellDef="let element"> {{element.doctor.firstname}} </td>
+          <td mat-cell *matCellDef="let element"> {{ element.doctor.firstname }} {{ element.doctor.lastname }} </td>
         </ng-container>
       
    <!-- Name Column -->
@@ -45,7 +45,15 @@
 </ng-container>
   <ng-container matColumnDef="date">
     <th mat-header-cell *matHeaderCellDef  mat-sort-header> Date  </th>
-    <td mat-cell *matCellDef="let element">  {{ element.date | date: 'yyyy-MM-dd' }}</td>
+    <td mat-cell *matCellDef="let element">  {{element.date | date: 'yyyy-MM-dd' }}</td>
+  </ng-container>
+  <ng-container matColumnDef="startTime">
+    <th mat-header-cell *matHeaderCellDef  mat-sort-header> StartTime  </th>
+    <td mat-cell *matCellDef="let element">  {{element.startTime}}</td>
+  </ng-container>
+  <ng-container matColumnDef="endTime">
+    <th mat-header-cell *matHeaderCellDef  mat-sort-header> EndTime  </th>
+    <td mat-cell *matCellDef="let element">  {{element.endTime}}</td>
   </ng-container>
 
   <ng-container matColumnDef="actions">
