--- a/src/app/Admin/Appointment/update-appointment/update-appointment.component.html
+++ b/src/app/Admin/Appointment/update-appointment/update-appointment.component.html
@@ -29,6 +29,14 @@
         <div *ngIf="appointmentForm.controls['date']?.invalid && (appointmentForm.controls['date']?.dirty || appointmentForm.controls['date']?.touched)" class="error-message">dateOfBirth is required.</div>
 
         </div>
+        <div>
+          <mat-form-field appearance="outline">
+            <mat-label>Input type time</mat-label>
+            <input type="time" matInput name="startTime" min="09:00" max="18:00" [(ngModel)]="appointment.startTime" />
+          </mat-form-field>
+          <div *ngIf="appointmentForm.controls['startTime']?.invalid && (appointmentForm.controls['startTime']?.dirty || appointmentForm.controls['startTime']?.touched)" class="error-message">Start Time is required.</div>
+        </div>
+        
        
  <button mat-raised-button color="primary" type="submit">Update</button>
     </form>
