--- a/src/app/Admin/navbar/navbar.component.html
+++ b/src/app/Admin/navbar/navbar.component.html
@@ -14,6 +14,9 @@
         <CDBSidebarMenuItem link='/admin/appointment' icon="table">
           Appointment Management
         </CDBSidebarMenuItem>
+        <CDBSidebarMenuItem link='/admin/analysis' icon="table">
+           Analysis
+        </CDBSidebarMenuItem>
         <CDBSidebarMenuItem link='/' icon="user">
           Deconnexion
         </CDBSidebarMenuItem>
