--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,4 +1,5 @@
-body {
+
+   body {
     background-image: url("doctors.png");
     background-size: cover;
     background-repeat: no-repeat;
@@ -16,11 +17,11 @@ body {
     padding: 20px;
     max-width: 400px;
     text-align: center;
-      position: absolute;
-
- 
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
-
   
   h2 {
     color: #333;
@@ -35,13 +36,17 @@ body {
     display: block;
     margin-top: 10px;
   }
-  .error-message{
+  
+  .error-message {
     color: red;
     font-size: 14px;
     margin-top: 10px;
   }
+  
   input[type="email"],
-  input[type="password"] {
+  input[type="password"],
+  input[type="text"]
+   {
     width: 100%;
     padding: 10px;
     margin-top: 5px;
@@ -65,33 +70,32 @@ body {
     text-decoration: none;
     color: #333;
   }
-
   
   button[type="submit"] {
     margin-top: 10px;
-    background-color: #007bff;
-    color: white;
-    padding: 10px 20px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    font-size: 16px;
-    width: 200px;
+  background-color: #007bff;
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
+  width: 200px;
   }
-  .error-message1 {
-    color: red;
-    font-size: 14px;
-    margin-top: 0px;
-    margin-right: 60%;
-  }
+  
+  .error-message1,
   .error-message2 {
     color: red;
     font-size: 14px;
-    margin-right: 60%
-
+    margin-top: 5px;
+    text-align: left;
+  }
+  .error-message1 {
+    margin-right: auto;
+    margin-left: 0;
   }
   
-  button[type="submit"]:hover {
-    background-color: #0056b3;
+  .error-message2 {
+    margin-left: auto;
+    margin-right: 0;
   }
-  
